--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ a{
     padding: 15px;
 }
 
-img{
+.main-image{
     width: auto;
     height: 150px;
     align-self: center;
@@ -84,4 +84,31 @@ button{
 
 .sign{
     align-items: center;
+}
+
+.content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.image-subtext{
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    gap: 15px;
+}
+
+.flex-container{
+    display: flex;
+    flex-direction: column;
+    text-wrap: wrap;
+    width: 150px;
+}
+
+.small-img{
+    border-radius: 24px;
+    border-color: blue;
+    border-style: solid;
 }
